src/parser/snapshots/coconut__parser__functions__tests__parse_program_immediately_invoked_function_expr.snap
---
source: src/parser/functions.rs
expression: "parse_program(r#\"(function () {\n                    123; // something\n                })()\"#.into()).unwrap().1"
---
{
  "type": "Program",
  "body": [
    {
      "type": "ExpressionStatement",
      "expression": {
        "type": "CallExpression",
        "callee": {
          "type": "FunctionExpression",
          "id": null,
          "params": [],
          "body": {
            "type": "BlockStatement",
            "body": [
              {
                "type": "ExpressionStatement",
                "expression": {
                  "type": "Literal",
                  "value": 123.0,
                  "start": 35,
                  "end": 38
                },
                "start": 35,
                "end": 52
              }
            ],
            "start": 13,
            "end": 70
          },
          "async": false,
          "start": 1,
          "end": 70
        },
        "arguments": [],
        "start": 1,
        "end": 73
      },
      "start": 0,
      "end": 73
    }
  ],
  "start": 0,
  "end": 73
}
