src/parser/snapshots/coconut__parser__functions__tests__program.snap
---
source: src/parser/functions.rs
expression: "parse_program(r#\"var x = 1;\n                function foo() {\n                    return x;\n                }\"#.into()).unwrap().1"
---
{
  "type": "Program",
  "body": [
    {
      "type": "VariableDeclaration",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "id": {
            "type": "Identifier",
            "name": "x",
            "start": 4,
            "end": 5
          },
          "init": {
            "type": "Literal",
            "value": 1.0,
            "start": 8,
            "end": 9
          },
          "start": 4,
          "end": 9
        }
      ],
      "kind": "var",
      "start": 0,
      "end": 10
    },
    {
      "type": "FunctionDeclaration",
      "id": {
        "type": "Identifier",
        "name": "foo",
        "start": 36,
        "end": 39
      },
      "params": [],
      "body": {
        "type": "BlockStatement",
        "body": [
          {
            "type": "ReturnStatement",
            "argument": {
              "type": "Identifier",
              "name": "x",
              "start": 71,
              "end": 72
            },
            "start": 64,
            "end": 73
          }
        ],
        "start": 42,
        "end": 91
      },
      "start": 27,
      "end": 91
    }
  ],
  "start": 0,
  "end": 91
}
